itexams.com/q17/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: pong
  name: pong
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: pong
  type: NodePort
status:
  loadBalancer: {}
