itexams.com/q17/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ing-internal
spec:
  defaultBackend:
    service:
      name: pong
      port:
        number: 80
  rules:
  - http:
      paths:
      - backend:
          service:
            name: svc
            port:
              number: 5678
        path: /hello
        pathType: Exact
status:
  loadBalancer: {}
